2008-02-18 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/s51.src/Makefile.in: fixed error made in previous commit

2008-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): emit -z when using --debug for z80

2008-02-17 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c,
	* src/pic16/gen.c,
	* src/pic16/gen.h,
	* src/pic16/genutils.c: removed unused legacy code,
	  removed unused fields from struct asmop and struct _G

2008-02-17 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (AccRsh): cosmetic changes,
	  (shiftR1Left2ResultSigned,shiftR1Left2Result,shiftL1Left2Result,
	  genRightShiftLiteral): fixed to work with SFRs as result by
	  assigning only once to result,
	  removed a lot of unused/excluded code fragments

2008-02-17 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f88.h,
	* device/include/pic/pic16f886.h,
	* device/include/pic/pic16f887.h: added TRISA6 and TRISA7

2008-02-17 Borut Razem <borut.razem AT siol.net>

	* src/z80/peeph.def: applied patch
	  #1893626: Optimize tail calls on Z80, thanks to Philipp Krause
	* src/z80/gen.c, src/z80/peeph.def: applied patch
	  #1893510: Improve logical left shift on Z80, thanks to Philipp Krause
	* sim/ucsim/avr.src/Makefile.in, sim/ucsim/hc08.src/Makefile.in,
	  sim/ucsim/s51.src/Makefile.in, sim/ucsim/sim.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in, sim/ucsim/z80.src/Makefile.in,
	  sim/ucsim/main_in.mk: renamed libutil.a to libucsimutil.a in order to
	  enable compilation on Mac OS X 10.5 (Leopard) and XCode v3.0

2008-02-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/aslink.dsp: removed SDK define
	* as/link/z80/clean.mk: brought in sync with other ports
	* as/link/z80/lklibr.c (SdccLib, fndsym): handle the dflag here too
	* as/hc08/Makefile.bcc,
	* as/mcs51/Makefile.bcc,
	* as/z80/Makefile.bcc: noice.c was moved to as/asxxsrc/
	* src/z80/main.c (_setValues): use the now capitalized -Z,